; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/api/core/extr_esp_ble_mesh_networking_api.c_esp_ble_mesh_server_model_send_msg.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/api/core/extr_esp_ble_mesh_networking_api.c_esp_ble_mesh_server_model_send_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@BTC_BLE_MESH_ACT_SERVER_MODEL_SEND = common dso_local global i32 0, align 4
@ROLE_NODE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_ble_mesh_server_model_send_msg(i32* %0, i32* %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %5
  %15 = load i32*, i32** %8, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %19, label %17

17:                                               ; preds = %14, %5
  %18 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  store i32 %18, i32* %6, align 4
  br label %28

19:                                               ; preds = %14
  %20 = load i32*, i32** %7, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = load i32, i32* %9, align 4
  %23 = load i32, i32* @BTC_BLE_MESH_ACT_SERVER_MODEL_SEND, align 4
  %24 = load i32, i32* %10, align 4
  %25 = load i32*, i32** %11, align 8
  %26 = load i32, i32* @ROLE_NODE, align 4
  %27 = call i32 @ble_mesh_model_send_msg(i32* %20, i32* %21, i32 %22, i32 %23, i32 %24, i32* %25, i32 0, i32 0, i32 %26)
  store i32 %27, i32* %6, align 4
  br label %28

28:                                               ; preds = %19, %17
  %29 = load i32, i32* %6, align 4
  ret i32 %29
}

declare dso_local i32 @ble_mesh_model_send_msg(i32*, i32*, i32, i32, i32, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
